--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Haonan Yu"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Struggling in research and papers"
   location         : "Earth"
   employer         : "Red Brick University"
   uri              : # URL
